[package]
name = "foray_rust"
version = "0.1.0"
authors = ["dkestell <drew.kestell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "libloaderapi",
    "commctrl", 
    "combaseapi",
    "dxgi",
    "dxgitype",
    "dxgi1_2",
    "dxgi1_3",
    "dxgidebug",
    "d3d11",
    "d3d11sdklayers",
    "d3d11_1",
    "dwrite",
    "dwrite_2",
    "d2d1",
    "d2d1_1",
    "d2d1_2",
    "dxgiformat",
    "profileapi"
]}